--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Care+ Management System | MEDIBuddy</title>
+    <title>Care+ Management System | CARE+</title>
   </head>
   <body>
     <div class="container">
       <nav>
-        <div class="nav__logo">MEDIBuddy</div>
+        <div class="nav__logo">CARE+y</div>
         <ul class="nav__links">
           <li class="link"><a href="#">Home</a></li>
           <li class="link"><a href="#">About Us</a></li>
