--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="nav__logo">CARE+y</div>
         <ul class="nav__links">
           <li class="link"><a href="#">Home</a></li>
-          <li class="link"><a href="#">About Us</a></li>
+          <li class="link"><a href="#">About</a></li>
           <li class="link"><a href="#">Courses</a></li>
           <li class="link"><a href="#">Pages</a></li>
           <li class="link"><a href="#">Blog</a></li>
@@ -26,7 +26,7 @@
       </nav>
       <header class="header">
         <div class="content">
-          <h1><span>Get Quick</span><br />Medical Services</h1>
+          <h1><span>Welcom to</span><br />Care+ Management System</h1>
           <p>
             In our current high-speed society, rapid and effective access 
             to medical services stands as a critical necessity.
