--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <nav>
-        <div class="nav__logo">CARE+y</div>
+        <div class="nav__logo">CARE+</div>
         <ul class="nav__links">
           <li class="link"><a href="#">Home</a></li>
           <li class="link"><a href="#">About</a></li>
