--- a/index.html
+++ b/index.html
@@ -1,65 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Care+ Management System | CARE+</title>
-  </head>
-  <body>
-    <div class="container">
-      <nav>
-        <div class="nav__logo">CARE+</div>
-        <ul class="nav__links">
-          <li class="link"><a href="#">Home</a></li>
-          <li class="link"><a href="#">About</a></li>
-          <li class="link"><a href="#">Courses</a></li>
-          <li class="link"><a href="#">Pages</a></li>
-          <li class="link"><a href="#">Blog</a></li>
-          <li class="link"><a href="#">Contact</a></li>
-        </ul>
-        <button class="btn">Register Now</button>
-      </nav>
-      <header class="header">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Care+ Management System</title>
+
+    <link rel="shortcut icon" href="https://http://localhost/Care+%20MS/client-login/assets/images/favicon.png"
+        type="image/x-icon">
+
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700%7COpen+Sans&display=swap" />
+
+    <!-- Libraries -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- Custom styling -->
+    <link rel="stylesheet" href="./assets/css/util.css">
+    <link rel="stylesheet" href="./assets/css/animation.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+
+<body>
+
+    <div class="wrapper">
+
+        <!-- Header -->
+        <header>
+            <img class="logo" src="./assets/img/cdn-channel.png" width="140" alt="Logo" />
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="Portfolio">Portfolio</a></li>
+                </ul>
+            </nav>
+            <button> <i class="fa fa-envelope-o" /></i> Contact Me</button>
+
+        </header>
+        <!-- End Header -->
+
+        <!-- Main Content -->
         <div class="content">
-          <h1><span>Welcom to</span><br />Care+ Management System</h1>
-          <p>
-            In our current high-speed society, rapid and effective access 
-            to medical services stands as a critical necessity.
-            Whether encountering a medical crisis or requiring urgent medical care, 
-            the swift delivery of medical services can profoundly influence the 
-            result of any given situation.
-          </p>
-          <button class="btn">Get Services</button>
-        </div>
-        <div class="image">
-          <span class="image__bg"></span>
-          <img src="assets/header-bg.png" alt="header image" />
-          <div class="image__content image__content__1">
-            <span><i class="ri-user-3-line"></i></span>
-            <div class="details">
-              <h4>1520+</h4>
-              <p>Active Clients</p>
+            <div class="hero-info m-50" style="flex-basis: 640px;">
+                <h1>Learn Programming in <span class="locale">தமிழ்</span></h1>
+                <p>Gaining knowledge is one of the main skill building task which everyone should follow. Thanks to <a
+                        href="https://internet.org" target="_blank">Internet</a>, now we can browse almost anything. But
+                    all educational materials are in English? Why not? provide quality education in native language for
+                    people who need it. </p>
+                <a class="btn btn-outline" href="https://www.youtube.com/user/clicksofttech" target="_blank"> <i
+                        class="fa fa-video-camera"></i> Learn now</a>
+
+                <div class="social-links">
+                    <ul>
+                        
+                        <li><a href="https://www.youtube.com/channel/UCDcG_Av0e6W3Qv4P0C8sy0Q" target="_blank"
+                                class="btn-social bg-youtube">
+                                <i class="fa fa-youtube"></i> YouTube
+                            </a></li>
+                        <li><a href="https://www.twitter.com/CodeMartino/" target="_blank"
+                                class="btn-social bg-twitter">
+                                <i class="fa fa-twitter"></i> Twitter
+                            </a></li>
+
+                    </ul>
+
+                </div>
             </div>
-          </div>
-          <div class="image__content image__content__2">
-            <ul>
-              <li>
-                <span><i class="ri-check-line"></i></span>
-                Get 20% off on every 1st month
-              </li>
-              <li>
-                <span><i class="ri-check-line"></i></span>
-                Expert Doctors
-              </li>
-            </ul>
-          </div>
+
+            <img src="assets/img/undraw_researching_22gp.svg" alt="Learning">
         </div>
-      </header>
+
+        <!-- End Main Content -->
+
+        <!-- Footer -->
+        <footer>
+
+        </footer>
+        <!-- End Footer -->
     </div>
-  </body>
+
+
+</body>
+
 </html>
